FPLA-3076 Clean up documents tab